--- a/package.json
+++ b/package.json
@@ -1,32 +1,41 @@
 {
-  "name": "lsttao",
+  "name": "wsttao",
   "version": "1.0.0",
-  "description": "A Liquid-Staked TAO ERC-20",
+  "description": "A Wrapped Staked TAO ERC-20",
   "main": "index.js",
-  "repository": "https://github.com/latent-to/lsttao",
+  "repository": "https://github.com/latent-to/wsttao",
   "author": "camfairchild",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "build": "npx hardhat compile",
+    "deploy-main": "npx hardhat run scripts/deploy.ts --network subevm",
+    "deploy-testnet": "npx hardhat run scripts/deploy.ts --network testnet",
+    "test": "REPORT_GAS=true npx hardhat test --network hardhat",
+    "balance-main": "npx hardhat run scripts/get-balance.ts --network subevm",
+    "balance-testnet": "npx hardhat run scripts/get-balance.ts --network testnet"
+  },
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-ignition": "^0.15.0",
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
-    "@typechain/ethers-v6": "^0.5.0",
-    "@typechain/hardhat": "^9.0.0",
-    "@types/chai": "^4.2.0",
-    "@types/mocha": ">=9.1.0",
-    "@types/node": ">=18.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.0.0",
+    "@openzeppelin/contracts": "5.0.1",
+    "@openzeppelin/contracts-upgradeable": "^5.1.0",
+    "@typechain/ethers-v6": "^0.4.0",
+    "@typechain/hardhat": "^8.0.0",
+    "@types/chai": "^4.3.19",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "^22.5.4",
     "chai": "^4.2.0",
-    "ethers": "^6.4.0",
-    "hardhat": "^2.22.17",
+    "ethers": "^6.13.2",
+    "fs": "^0.0.1-security",
+    "hardhat": "^2.19.4",
     "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.8.0",
-    "ts-node": ">=8.0.0",
-    "typechain": "^8.3.0",
-    "typescript": ">=4.5.0"
+    "solidity-coverage": "^0.8.13",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.3.3"
   }
 }
