--- a/lz-deployment/.env.example
+++ b/lz-deployment/.env.example
@@ -13,3 +13,5 @@
 # You don't need to set both of these values, just pick the one that you prefer and set that one
 MNEMONIC=
 PRIVATE_KEY=
+RPC_URL_SUBEVM="https://bittensor-testnet-lite-public.nodies.app"
+RPC_URL_SUBEVM_MAINNET="https://bittensor-lite-public.nodies.app" #https://lite.sub.latent.to"
