--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   "scripts": {
     "build": "npx hardhat compile",
     "deploy-main": "npx hardhat run scripts/deploy.ts --network subevm",
+    "test-deploy": "npx hardhat run scripts/deploy.ts --network localnet",
+    "test": "npx hardhat test --network localnet",
     "test-localnet": "npx hardhat test --network localnet",
     "balance-main": "npx hardhat run scripts/get-balance.ts --network subevm",
-    "test-get-balance": "npx hardhat run scripts/get-balance.ts --network testnet",
-    "test-contract": "npx hardhat run scripts/test-contract.ts --network testnet",
+    "test-get-balance": "npx hardhat run scripts/get-balance.ts --network localnet",
+    "test-contract": "npx hardhat run scripts/test-contract.ts --network localnet",
     "test-contract-main": "npx hardhat run scripts/test-contract.ts --network subevm",
     "contract-transfer-to-stake": "npx hardhat run scripts/test-contract-transfer-to-stake.ts --network subevm",
-    "test-contract-unstake": "npx hardhat run scripts/test-contract-unstake.ts --network testnet",
-    "test-contract-alpha": "npx hardhat run scripts/test-contract-alpha.ts --network testnet",
-    "test-stake": "npx hardhat run scripts/test-stake.ts --network testnet",
-    "test-get-stake": "npx hardhat run scripts/test-get-stake.ts --network testnet",
+    "test-contract-unstake": "npx hardhat run scripts/test-contract-unstake.ts --network localnet",
+    "test-contract-alpha": "npx hardhat run scripts/test-contract-alpha.ts --network localnet",
+    "test-stake": "npx hardhat run scripts/test-stake.ts --network localnet",
+    "test-get-stake": "npx hardhat run scripts/test-get-stake.ts --network localnet",
     "get-stake": "npx hardhat run scripts/test-get-stake.ts --network subevm",
-    "test-get-stake-alpha": "npx hardhat run scripts/test-get-stake-alpha.ts --network testnet",
-    "test-deploy-alpha": "npx hardhat run scripts/deploy-alpha.ts --network testnet",
+    "test-get-stake-alpha": "npx hardhat run scripts/test-get-stake-alpha.ts --network localnet",
+    "test-deploy-alpha": "npx hardhat run scripts/deploy-alpha.ts --network localnet",
     "upgrade-main": "npx hardhat run scripts/upgrade.ts --network subevm"
   },
   "devDependencies": {
